--- a/css/styles.scss
+++ b/css/styles.scss
@@ -79,7 +79,7 @@ body {
         align-self: center;
         padding: 0.8rem;
         margin-top: 1rem;
-        background-color: $secondary-color;
+        background-color: black;
         border: 1px solid white;
         border-radius: 5px;
         color: white;
@@ -88,7 +88,8 @@ body {
 
         &:hover {
           cursor: pointer;
-          background-color: #2a6f97;
+          opacity: 0.8;
+          transform: scale(1.1);
           transition: 0.5s ease-in-out;
         }
       }
@@ -139,7 +140,9 @@ body {
       }
     }
     #refresh {
-      align-self: flex-end;
+      position: absolute;
+      bottom: 1rem;
+      left: 1rem;
       margin: 1rem;
       opacity: 0.6;
 
